src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Campaign_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <formula>Lead_Score__c + Campaign_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>